@@ -1,3 +1,8 @@
+2002-02-12  Alexandre Oliva  <aoliva@redhat.com>
+
+	* elf-m10300.c (mn10300_elf_relax_section): Skip section before
+	loading its contents if there's nothing to do in it.
+
 2002-02-12  Alan Modra  <amodra@bigpond.net.au>
 
 	* elf64-ppc.c (ppc64_elf_size_stubs): Correct test for crossing
